--- a/work1/gallery.html
+++ b/work1/gallery.html
@@ -7,6 +7,11 @@
   <title>Gallery</title>
 </head>
 <body>
+    <nav>
+    <a href="./index.html">Головна</a>
+    <a href="./gallery.html">Галерея</a>
+  </nav>
+
   <ul>
     <li><img src="https://images.unsplash.com/photo-1665501340269-5ced49f91a92?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxODY2Nzh8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjY5ODAxNjA&ixlib=rb-4.0.3&q=80&w=1080" alt="picture" width="500"></li>
     <li><img src="https://images.unsplash.com/photo-1664542496670-c1cb00693ac9?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxODY2Nzh8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NjY5ODAzMDk&ixlib=rb-4.0.3&q=80&w=1080" alt="picture" width="500"></li>
