--- a/work1/index.html
+++ b/work1/index.html
@@ -57,6 +57,18 @@
         <dd>Створює новий локальний репозиторій із заданим ім'ям</dd>
       </dl>
     </li>
+    <li>
+      <dl>
+        <dt>git clone [url-адрес]</dt>
+        <dd>Завантажує репозиторій разом із усією його історією змін</dd>
+      </dl>
+    </li>
+    <li>
+      <dl>
+        <dt></dt>
+        <dd></dd>
+      </dl>
+    </li>
 
 </body>
 </html>
