--- a/work1/index.html
+++ b/work1/index.html
@@ -65,8 +65,8 @@
     </li>
     <li>
       <dl>
-        <dt></dt>
-        <dd></dd>
+        <dt>git push [удалённый репозиторий] [ветка]</dt>
+        <dd>Завантажує всі зміни локальної гілки у віддалений репозиторій</dd>
       </dl>
     </li>
 
