--- a/css start/index.html
+++ b/css start/index.html
@@ -4,9 +4,107 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>css</title>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  
+  <h1>CSS селектори</h1>
+  <ul>
+    <li>
+      <dl>
+        <dt># id</dt>
+        <dd>Ідентифікатор id має бути унікальним і може використовуватися на сторінці лише один раз. При можливості старайтесь ходити без ідентифікаторів. Старайтесь використовувати теги або псевдокласси.</dd>
+      </dl>
+    </li>
+    <li>
+      <dl>
+        <dt>. class</dt>
+        <dd>Cелектор класу. Відмінні селектори class від id, що клас не повинен бути унікальним і може використовуватись для вибору кількох елементів на сторінці. Використання id дозволяє вибрати конкретний унікальний елемент.</dd>
+      </dl>
+    </li>
+    <li>
+      <dl>
+        <dt>div</dt>
+        <dd>Селектор тегу. Описує, до якого типу елементів буде застосоване CSS-правило. Селектор елемента недостатньо специфічний для того, щоб стилізувати окремі елементи, тому найчастіше застосовується для оформлення всіх тегів одного типу на сторінці.</dd>
+      </dl>
+    </li>
+    <li>
+      <dl>
+        <dt>li a</dt>
+        <dd>Селектор нащадка або контекстний селектор застосовує стилі до дітей і нащадків елемента за будь-якої глибини вкладеності.Наприклад, замість того, щоб задати стиль усім посиланням, вам потрібно змінити відображення лише тих посилок, які розташовані всередині несортованого списку.</dd>
+      </dl>
+    </li>
+    <li>
+      <dl>
+        <dt>ul + p</dt>
+        <dd>Це сусідній селектор. Він допоможе нам вибрати тільки той елемент, який слід відразу ж за вказаним елементом. У цьому прикладі ми вибираємо тільки перший абзац тексту, наступний відразу за тегом ul.</dd>
+      </dl>
+    </li>
+    <li>
+      <dl>
+        <dt>.container > ul</dt>
+        <dd>Селектор прямого нащадка або дитини.Ще один поширений селектор, який дозволяє вибрати тільки безпосередню дитину всередині батьківського елементу. Селектор вибере тільки той елемент , який є прямим потомком .container > ul елемента з рівним . Він не вибере, наприклад, елемент , який є потомком першого елемента .</dd>
+      </dl>
+    </li>
+    <li>
+      <dl>
+        <dt>a[href] або a[href="./img.jpg"]</dt>
+        <dd>Селектор атрибута. Дозволяє застосувати стилі до елементів з певним атрибутом або його значенням.</dd>
+      </dl>
+    </li>
+    <li>
+      <dl>
+        <dt>*</dt>
+        <dd>Універсальний селектор відповідає будь-якому елементу на сторінці.</dd>
+      </dl>
+    </li>
+    <li>
+      <dl>
+        <dt>input[type=radio]:checked</dt>
+        <dd>Даний псевдоклас вибирає тільки позначені елементи інтерфейсу користувача: радіокнопки або чекбокси .</dd>
+      </dl>
+    </li>
+    <li>
+      <dl>
+        <dt>ul ~ p</dt>
+        <dd>Селектор вибере всі елементи p , розташовані після елемента ul на одному рівні вкладеності.</dd>
+      </dl>
+    </li>
+    <li>
+      <dl>
+        <dt>&#8249;p style="color:blue;"&#8250;</dt>
+        <dd>Вбудовані (інлайн) стилі задаються тегу безпосередньо в атрибуті style. Їх неможливо масштабувати, складно перевизначати і використовувати повторно, тому вони застосовуються в дуже рідкісних випадках.</dd>
+      </dl>
+    </li>
+    <li>
+      <dl>
+        <dt>!important</dt>
+        <dd>Правило !importantв CSS використовується, щоб додати властивості/значенню більшої важливості, ніж зазвичай.Насправді, якщо ви використовуєте !important правило, воно замінить УСІ попередні правила стилю для цієї конкретної властивості цього елемента!</dd>
+      </dl>
+    </li>
+  </ul>
+
+  <h2>Приклади</h2>
+  <p style="color: red;">текст для прикладу</p>
+  <p id="paragraf">текст для прикладу</p>
+  <p class="text">текст для прикладу</p>
+  <p class="text twice">текст для прикладу</p>
+  <ul class="list">
+    <li class="item">текст для прикладу</li>
+    <li class="item">текст для прикладу</li>
+    <li class="item">
+      <ol>
+        <li>текст для прикладу</li>
+        <li>текст для прикладу</li>
+        <li>текст для прикладу</li>
+      </ol>
+    </li>
+    <li class="item">текст для прикладу</li>
+    <li class="item">текст для прикладу</li>
+  </ul>
+  <p>текст для прикладу</p>
+  <p>текст для прикладу</p>
+  <p>текст для прикладу</p>
+  <p>текст для прикладу</p>
 </body>
 </html>
