--- a/beauty site float/index.html
+++ b/beauty site float/index.html
@@ -41,25 +41,26 @@
           <span>BEAUTY</span>
         </a>
         <div class="middle-line_buttons float-right">
-          <a href="tel:1(213)123-45-67">1 (213) 123-45-67</a>
-          <button class="btn">Call back</button>
+          <a href="tel:12131234567">1 (213) 123-45-67</a>
+          <button class="btn btn-padding-head-foot">Call back</button>
         </div>
       </div>
     </div>
 
     <div class="bottom-line">
-        <nav>
-            <ul class="horizontal-nav">
-                <li><a href="#">Salon</a></li>
-                <li><a href="#">Barbershop</a></li>
-                <li><a href="#">Manicure</a></li>
-                <li><a href="#">Pedicure</a></li>
-                <li><a href="#">Massage</a></li>
-                <li><a href="#">Furniture</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <ul class="horizontal-nav">
+          <li><a href="#">Salon</a></li>
+          <li><a href="#">Barbershop</a></li>
+          <li><a href="#">Manicure</a></li>
+          <li><a href="#">Pedicure</a></li>
+          <li><a href="#">Massage</a></li>
+          <li><a href="#">Furniture</a></li>
+        </ul>
+      </nav>
     </div>
   </header>
+
   <main>
     <section class="banner">
       <div class="container">
@@ -68,7 +69,7 @@
           The text of the action always reflects the essence, and not just
           chatter, so be careful
         </p>
-        <button class="btn btn-white">More</button>
+        <a href="#" class="btn btn-white">More</a>
       </div>
     </section>
     <section class="special">
@@ -79,41 +80,41 @@
             <div class="product-img">
               <img src="images/product.png" alt="product" />
             </div>
-            <div class="product-title">
+            <p class="product-title">
               Hairdressing chair "Norm" hydraulic
-            </div>
+            </p>
             <div class="product-price">300$</div>
-            <button class="btn btn-primary">Buy</button>
-          </div>
-          <div class="product card">
-          <div class="product-img">
-            <img src="images/product.png" alt="product" />
-          </div>
-          <div class="product-title">
-            Hairdressing chair "Norm" hydraulic
-          </div>
-          <div class="product-price">300$</div>
-          <button class="btn btn-primary">Buy</button>
+            <a href="#" class="btn btn-primary">Buy</a>
           </div>
           <div class="product card">
             <div class="product-img">
               <img src="images/product.png" alt="product" />
             </div>
-            <div class="product-title">
+            <p class="product-title">
               Hairdressing chair "Norm" hydraulic
-            </div>
+            </p>
             <div class="product-price">300$</div>
-            <button class="btn btn-primary">Buy</button>
+            <a href="#" class="btn btn-primary">Buy</a>
           </div>
           <div class="product card">
             <div class="product-img">
               <img src="images/product.png" alt="product" />
             </div>
-            <div class="product-title">
+            <p class="product-title">
               Hairdressing chair "Norm" hydraulic
-            </div>
+            </p>
             <div class="product-price">300$</div>
-            <button class="btn btn-primary">Buy</button>
+            <a href="#" class="btn btn-primary">Buy</a>
+          </div>
+          <div class="product card">
+            <div class="product-img">
+              <img src="images/product.png" alt="product" />
+            </div>
+            <p class="product-title">
+              Hairdressing chair "Norm" hydraulic
+            </p>
+            <div class="product-price">300$</div>
+            <a href="#" class="btn btn-primary">Buy</a>
           </div>
         </div>
       </div>
@@ -123,10 +124,10 @@
         <div class="cards cards-2 clearfix">
           <div class="card bg-primary clearfix">
             <div class="float-left">
-              <h4 class="cta-title">Get bonuses and gifts</h4>
+              <h3 class="cta-title">Get bonuses and gifts</h3>
               <p>Every month we play $1000 for our clients</p>
-              <!-------------- HOME--WORK ---------------->
-              <input type="email" placeholder="Enter your e-mail"/>
+<!-------------- HOME--WORK ---------------->
+              <input type="email" placeholder="Enter your e-mail" />
             </div>
             <div class="float-right">
               <img src="images/mail.svg" alt="mail" />
@@ -134,7 +135,7 @@
           </div>
           <div class="card bg-primary clearfix">
             <div class="float-left">
-              <h4 class="cta-title">Visit us</h4>
+              <h3 class="cta-title">Visit us</h3>
               <p>Over 300 stores throughout the USA</p>
               <a class="btn btn-white" href="#">Store map</a>
             </div>
@@ -195,47 +196,114 @@
             <div class="product-img">
               <img src="images/product.png" alt="product" />
             </div>
-            <div class="product-title">
+            <p class="product-title">
               Hairdressing chair "Norm" hydraulic
-            </div>
+            </p>
             <div class="product-price">300$</div>
-            <button class="btn btn-primary">Buy</button>
+            <a href="#" class="btn btn-primary">Buy</a>
           </div>
           <div class="product card">
             <div class="product-img">
               <img src="images/product.png" alt="product" />
             </div>
-            <div class="product-title">
+            <p class="product-title">
               Hairdressing chair "Norm" hydraulic
-            </div>
+            </p>
             <div class="product-price">300$</div>
-            <button class="btn btn-primary">Buy</button>
+            <a href="#" class="btn btn-primary">Buy</a>
           </div>
           <div class="product card">
             <div class="product-img">
               <img src="images/product.png" alt="product" />
             </div>
-            <div class="product-title">
+            <p class="product-title">
               Hairdressing chair "Norm" hydraulic
-            </div>
+            </p>
             <div class="product-price">300$</div>
-            <button class="btn btn-primary">Buy</button>
+            <a href="#" class="btn btn-primary">Buy</a>
           </div>
           <div class="product card">
             <div class="product-img">
               <img src="images/product.png" alt="product" />
             </div>
-            <div class="product-title">
+            <p class="product-title">
               Hairdressing chair "Norm" hydraulic
-            </div>
+            </p>
             <div class="product-price">300$</div>
-            <button class="btn btn-primary">Buy</button>
+            <a href="#" class="btn btn-primary">Buy</a>
           </div>
         </div>
       </div>
     </section>
   </main>
-  <footer></footer>
+
+  <footer>
+    <div class="container categories clearfix cards-4">
+      <div class="foot-box card">
+        <h4 class="foot-title">Popular categories</h4>
+        <ul class="foot-list list">
+          <li><a class="foot-link" href="#">Нozzles</a></li>
+          <li><a class="foot-link" href="#">Tools</a></li>
+          <li><a class="foot-link" href="#">Gel polishes</a></li>
+          <li><a class="foot-link" href="#">Design</a></li>
+          <li><a class="foot-link" href="#">Building</a></li>
+          <li><a class="foot-link" href="#">Equipment</a></li>
+        </ul>
+      </div>
+      <div class="foot-box card">
+        <h4 class="foot-title">Popular categories</h4>
+        <ul class="foot-list list">
+          <li><a class="foot-link" href="#">Нozzles</a></li>
+          <li><a class="foot-link" href="#">Tools</a></li>
+          <li><a class="foot-link" href="#">Gel polishes</a></li>
+          <li><a class="foot-link" href="#">Design</a></li>
+          <li><a class="foot-link" href="#">Building</a></li>
+          <li><a class="foot-link" href="#">Equipment</a></li>
+        </ul>
+      </div>
+      <div class="foot-box card">
+        <h4 class="foot-title">Popular categories</h4>
+        <ul class="foot-list list">
+          <li><a class="foot-link" href="#">Нozzles</a></li>
+          <li><a class="foot-link" href="#">Tools</a></li>
+          <li><a class="foot-link" href="#">Gel polishes</a></li>
+          <li><a class="foot-link" href="#">Design</a></li>
+          <li><a class="foot-link" href="#">Building</a></li>
+          <li><a class="foot-link" href="#">Equipment</a></li>
+        </ul>
+      </div>
+      <div class="foot-box card">
+        <h4 class="foot-title">Popular categories</h4>
+        <ul class="foot-list list">
+          <li><a class="foot-link" href="#">Нozzles</a></li>
+          <li><a class="foot-link" href="#">Tools</a></li>
+          <li><a class="foot-link" href="#">Gel polishes</a></li>
+          <li><a class="foot-link" href="#">Design</a></li>
+          <li><a class="foot-link" href="#">Building</a></li>
+          <li><a class="foot-link" href="#">Equipment</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="box-line">
+      <div class="container">
+        <div class="contact clearfix">
+          <div class="social float-left">
+            <a href="#"><img src="./images/youtube.svg" width="45" alt="social logo"></a><a href="#"><img src="./images/facebook-logo.svg" width="45" alt="social logo"></a><a href="#"><img src="./images/instagram.svg" width="45" alt="social logo"></a>
+          </div>
+          <div class="middle-line_buttons float-right">
+            <a href="tel:12131234567">1 (213) 123-45-67</a>
+            <button class="btn btn-padding-head-foot">Call back</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="bottom-box">
+      <div class="container clearfix">
+        <p class="float-left">Best Store (c) 2019 All rights reserved. Online store of equipment for beauty salons</p>
+        <p class="float-right">Privacy Policy</p>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
