--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -30,11 +30,28 @@
       </li>
       <li class="header-btn">
         <ul class="flex-center list">
-          <li class="header-btn-item"><a href="#" class="btn btn-white">Log in</a></li>
-          <li class="header-btn-item"><a href="#" class="btn btn-orange">Try it free</a></li>
+          <li class="header-btn-item"><a href="#" class="btn btn-white flex-center link">Log in</a></li>
+          <li class="header-btn-item"><a href="#" class="btn btn-orange flex-center link">Try it free</a></li>
         </ul>
       </li>
     </ul>
   </header>
+  <main>
+    <section class="hero">
+      <div class="container flex-center">
+        <div class="hero-content">
+          <h1 class="hero-title">Accelerate localization from code to delivery</h1>
+          <p class="hero-text">A localization and translation management platform for agile teams. Embrace automation, workflow transparency, and fast
+          project delivery.</p>
+          <ul class="hero-list list">
+            <li class="hero-item"><a class="btn btn-orange flex-center link" href="#">Try it free</a></li>
+            <li class="hero-item"><a class="btn btn-white flex-center link" href="#">Book a demo</a></li>
+          </ul>
+          <p class="hero-desc">Try all features for 14 days · No credit card required</p>
+        </div>
+        <img class="hero-img" src="./img/hero-img.png" alt="" width="751">
+      </div>
+    </section>
+  </main>
 </body>
 </html>
