--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -40,7 +40,7 @@
     <section class="hero">
       <div class="container flex-center">
         <div class="hero-content">
-          <h1 class="hero-title">Accelerate localization from code to delivery</h1>
+          <h1 class="hero-title title-font">Accelerate localization from code to delivery</h1>
           <p class="hero-text">A localization and translation management platform for agile teams. Embrace automation, workflow transparency, and fast
           project delivery.</p>
           <ul class="hero-list list">
@@ -50,6 +50,70 @@
           <p class="hero-desc">Try all features for 14 days · No credit card required</p>
         </div>
         <img class="hero-img" src="./img/hero-img.png" alt="" width="751">
+      </div>
+    </section>
+    <section class="preferred">
+      <div class="container">
+        <h2 class="preferred-title title-font">The preferred localization tool of 1500+ companies</h2>
+        <ul class="preferred-list flex-center">
+          <li class="preferred-item">
+            <a href="#" class="preferred-link"><img src="./img/client1.svg" alt="logo-client" class="preferred-img"></a>
+          </li>
+          <li class="preferred-item">
+            <a href="#" class="preferred-link"><img src="./img/client2.svg" alt="logo-client" class="preferred-img"></a>
+          </li>
+          <li class="preferred-item">
+            <a href="#" class="preferred-link"><img src="./img/client3.svg" alt="logo-client" class="preferred-img"></a>
+          </li>
+          <li class="preferred-item">
+            <a href="#" class="preferred-link"><img src="./img/client4.svg" alt="logo-client" class="preferred-img"></a>
+          </li>
+          <li class="preferred-item">
+            <a href="#" class="preferred-link"><img src="./img/client5.svg" alt="logo-client" class="preferred-img"></a>
+          </li>
+          <li class="preferred-item">
+            <a href="#" class="preferred-link"><img src="./img/client6.svg" alt="logo-client" class="preferred-img"></a>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="benefits">
+      <div class="container">
+        <ul class="benefits-list">
+          <li class="benefits-item flex-center">
+            <div class="benefits-content">
+              <h2 class="benefits-title title-font">Control the localization process</h2>
+              <p class="benefits-desc">Collaborate with your team in a single workspace. Add and assign <a href="#">tasks</a>, track progress, and enjoy a seamless localization workflow where you know who is doing what and when.</p>
+              <a href="#" class="benefits-link title-font link">Start now</a>
+            </div>
+            <img src="./img/benefit1.jpg" alt="picture benefit" class="benefits-img" width="632">
+          </li>
+          <li class="benefits-item flex-center">
+            <div class="benefits-content">
+              <h2 class="benefits-title title-font">Shorten time to market</h2>
+              <p class="benefits-desc">Localize your product in parallel with the development cycle. Use the <a href="#">Adobe XD</a>, <a href="#">Figma</a>, and <a href="">Sketch</a> plugins to start working on translations as soon as the product design is ready. No more idle waiting.</p>
+              <a href="#" class="benefits-link title-font link">Start now</a>
+            </div>
+            <img src="./img/benefit2.jpg" alt="picture benefit" class="benefits-img" width="632">
+            
+          </li>
+          <li class="benefits-item flex-center">
+            <div class="benefits-content">
+              <h2 class="benefits-title title-font">Ensure quality</h2>
+              <p class="benefits-desc">Use built-in tools — e.g. <a href="#">translation memory</a>, machine translation, and <a href="#">QA checks</a> — to enhance the quality and cohesion of translations. Add product <a href="#">screenshots</a> for context and use the <a href="#">in-context editors</a> for instant previews.</p>
+              <a href="#" class="benefits-link title-font link">Start now</a>
+            </div>
+            <img src="./img/benefit3.jpg" alt="picture benefit" class="benefits-img" width="632">
+          </li>
+          <li class="benefits-item flex-center">
+            <div class="benefits-content">
+              <h2 class="benefits-title title-font">Less work for developers</h2>
+              <p class="benefits-desc">Eliminate the hassle of localization and let developers get back to their main tasks. Save hours with the powerful <a href="#">API</a>, <a href="#">CLI</a>, <a href="#">mobile SDKs</a>, and integrations with <a href="#">GitHub</a>, <a href="#">Bitbucket</a>, <a href="#">JIRA</a>, and more.</p>
+              <a href="#" class="benefits-link title-font link">Start now</a>
+            </div>
+            <img src="./img/benefit4.jpg" alt="picture benefit" class="benefits-img" width="632">
+          </li>
+        </ul>
       </div>
     </section>
   </main>
