--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -116,6 +116,68 @@
         </ul>
       </div>
     </section>
+    <section class="products">
+      <div class="container">
+        <h2 class="products-title title-font">What can you localize with Lokalise?</h2>
+        <ul class="products-list flex-center list">
+          <li class="products-item flex-center">
+            <img src="./img/product1.svg" alt="product">
+            <h3 class="products-subtitle title-font">Web apps</h3>
+            <p class="products-text">Any kind of web apps — backend, frontend, single page, blogs — you name it.</p>
+          </li>
+          <li class="products-item flex-center">
+            <img src="./img/product2.svg" alt="product">
+            <h3 class="products-subtitle title-font">Mobile apps</h3>
+            <p class="products-text">Upload any mobile platform language files. Embed <a href="#">Lokalise iOS SDK</a> or <a href="#">Lokalise Android SDK</a> if you prefer.</p>
+          </li>
+          <li class="products-item flex-center">
+            <img src="./img/product3.svg" alt="product">
+            <h3 class="products-subtitle title-font">Games</h3>
+            <p class="products-text">Our cloud software is trusted by many leading game developers around the world.</p>
+          </li>
+          <li class="products-item flex-center">
+            <img src="./img/product4.svg" alt="product">
+            <h3 class="products-subtitle title-font">Documents</h3>
+            <p class="products-text">Upload your DOCX and static HTML files.</p>
+          </li>
+          <li class="products-item flex-center">
+            <img src="./img/product5.svg" alt="product">
+            <h3 class="products-subtitle title-font">Marketing e-mails</h3>
+            <p class="products-text">Integrate with Salesforce Marketing Cloud (coming soon) or translate static e-mails.</p>
+          </li>
+          <li class="products-item flex-center">
+            <img src="./img/product6.svg" alt="product">
+            <h3 class="products-subtitle title-font">IoT</h3>
+            <p class="products-text">We support most popular localization file formats.</p>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="productivity">
+      <div class="container">
+        <h2 class="productivity-title"></h2>
+        <ul class="productivity-list list">
+          <li class="productivity-item">
+            <img src="" alt="productivity picture">
+            <h3 class="productivity-title title-font"></h3>
+            <p class="productivity-text"></p>
+            <a href="" class="productivity-link"></a>
+          </li>
+          <li class="productivity-item">
+            <img src="" alt="productivity picture">
+            <h3 class="productivity-title title-font"></h3>
+            <p class="productivity-text"></p>
+            <a href="" class="productivity-link"></a>
+          </li>
+          <li class="productivity-item">
+            <img src="" alt="productivity picture">
+            <h3 class="productivity-title title-font"></h3>
+            <p class="productivity-text"></p>
+            <a href="" class="productivity-link"></a>
+          </li>
+        </ul>
+      </div>
+    </section>
   </main>
 </body>
 </html>
