--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -41,8 +42,9 @@
       <div class="container flex-center">
         <div class="hero-content">
           <h1 class="hero-title title-font">Accelerate localization from code to delivery</h1>
-          <p class="hero-text">A localization and translation management platform for agile teams. Embrace automation, workflow transparency, and fast
-          project delivery.</p>
+          <p class="hero-text">A localization and translation management platform for agile teams. Embrace automation,
+            workflow transparency, and fast
+            project delivery.</p>
           <ul class="hero-list list">
             <li class="hero-item"><a class="btn btn-orange flex-center link" href="#">Try it free</a></li>
             <li class="hero-item"><a class="btn btn-white flex-center link" href="#">Book a demo</a></li>
@@ -83,7 +85,9 @@
           <li class="benefits-item flex-center">
             <div class="benefits-content">
               <h2 class="benefits-title title-font">Control the localization process</h2>
-              <p class="benefits-desc">Collaborate with your team in a single workspace. Add and assign <a href="#">tasks</a>, track progress, and enjoy a seamless localization workflow where you know who is doing what and when.</p>
+              <p class="benefits-desc">Collaborate with your team in a single workspace. Add and assign <a
+                  href="#">tasks</a>, track progress, and enjoy a seamless localization workflow where you know who is
+                doing what and when.</p>
               <a href="#" class="benefits-link title-font link">Start now</a>
             </div>
             <img src="./img/benefit1.jpg" alt="picture benefit" class="benefits-img" width="632">
@@ -91,16 +95,21 @@
           <li class="benefits-item flex-center">
             <div class="benefits-content">
               <h2 class="benefits-title title-font">Shorten time to market</h2>
-              <p class="benefits-desc">Localize your product in parallel with the development cycle. Use the <a href="#">Adobe XD</a>, <a href="#">Figma</a>, and <a href="">Sketch</a> plugins to start working on translations as soon as the product design is ready. No more idle waiting.</p>
+              <p class="benefits-desc">Localize your product in parallel with the development cycle. Use the <a
+                  href="#">Adobe XD</a>, <a href="#">Figma</a>, and <a href="">Sketch</a> plugins to start working on
+                translations as soon as the product design is ready. No more idle waiting.</p>
               <a href="#" class="benefits-link title-font link">Start now</a>
             </div>
             <img src="./img/benefit2.jpg" alt="picture benefit" class="benefits-img" width="632">
-            
+
           </li>
           <li class="benefits-item flex-center">
             <div class="benefits-content">
               <h2 class="benefits-title title-font">Ensure quality</h2>
-              <p class="benefits-desc">Use built-in tools — e.g. <a href="#">translation memory</a>, machine translation, and <a href="#">QA checks</a> — to enhance the quality and cohesion of translations. Add product <a href="#">screenshots</a> for context and use the <a href="#">in-context editors</a> for instant previews.</p>
+              <p class="benefits-desc">Use built-in tools — e.g. <a href="#">translation memory</a>, machine
+                translation, and <a href="#">QA checks</a> — to enhance the quality and cohesion of translations. Add
+                product <a href="#">screenshots</a> for context and use the <a href="#">in-context editors</a> for
+                instant previews.</p>
               <a href="#" class="benefits-link title-font link">Start now</a>
             </div>
             <img src="./img/benefit3.jpg" alt="picture benefit" class="benefits-img" width="632">
@@ -108,7 +117,10 @@
           <li class="benefits-item flex-center">
             <div class="benefits-content">
               <h2 class="benefits-title title-font">Less work for developers</h2>
-              <p class="benefits-desc">Eliminate the hassle of localization and let developers get back to their main tasks. Save hours with the powerful <a href="#">API</a>, <a href="#">CLI</a>, <a href="#">mobile SDKs</a>, and integrations with <a href="#">GitHub</a>, <a href="#">Bitbucket</a>, <a href="#">JIRA</a>, and more.</p>
+              <p class="benefits-desc">Eliminate the hassle of localization and let developers get back to their main
+                tasks. Save hours with the powerful <a href="#">API</a>, <a href="#">CLI</a>, <a href="#">mobile
+                  SDKs</a>, and integrations with <a href="#">GitHub</a>, <a href="#">Bitbucket</a>, <a
+                  href="#">JIRA</a>, and more.</p>
               <a href="#" class="benefits-link title-font link">Start now</a>
             </div>
             <img src="./img/benefit4.jpg" alt="picture benefit" class="benefits-img" width="632">
@@ -128,7 +140,8 @@
           <li class="products-item flex-center">
             <img src="./img/product2.svg" alt="product">
             <h3 class="products-subtitle title-font">Mobile apps</h3>
-            <p class="products-text">Upload any mobile platform language files. Embed <a href="#">Lokalise iOS SDK</a> or <a href="#">Lokalise Android SDK</a> if you prefer.</p>
+            <p class="products-text">Upload any mobile platform language files. Embed <a href="#">Lokalise iOS SDK</a>
+              or <a href="#">Lokalise Android SDK</a> if you prefer.</p>
           </li>
           <li class="products-item flex-center">
             <img src="./img/product3.svg" alt="product">
@@ -143,7 +156,8 @@
           <li class="products-item flex-center">
             <img src="./img/product5.svg" alt="product">
             <h3 class="products-subtitle title-font">Marketing e-mails</h3>
-            <p class="products-text">Integrate with Salesforce Marketing Cloud (coming soon) or translate static e-mails.</p>
+            <p class="products-text">Integrate with Salesforce Marketing Cloud (coming soon) or translate static
+              e-mails.</p>
           </li>
           <li class="products-item flex-center">
             <img src="./img/product6.svg" alt="product">
@@ -155,29 +169,166 @@
     </section>
     <section class="productivity">
       <div class="container">
-        <h2 class="productivity-title"></h2>
+        <h2 class="productivity-title">Boost your localization team’s productivity tenfold</h2>
         <ul class="productivity-list list">
           <li class="productivity-item">
-            <img src="" alt="productivity picture">
-            <h3 class="productivity-title title-font"></h3>
-            <p class="productivity-text"></p>
-            <a href="" class="productivity-link"></a>
+            <div class="productivity-pic"><img src="./img/productivity1.svg" alt="productivity picture"></div>
+            <h3 class="productivity-subtitle title-font">Managers</h3>
+            <p class="productivity-text">Update existing and launch new features and products while simultaneously
+              localizing them in multiple languages. Streamline your team's workflow, maximize productivity, and speed
+              up expansion to other markets.</p>
+            <a href="#" class="productivity-link">Learn more</a>
           </li>
           <li class="productivity-item">
-            <img src="" alt="productivity picture">
-            <h3 class="productivity-title title-font"></h3>
-            <p class="productivity-text"></p>
-            <a href="" class="productivity-link"></a>
+            <div class="productivity-pic"><img src="./img/productivity2.svg" alt="productivity picture"></div>
+            <h3 class="productivity-subtitle title-font">Developers</h3>
+            <p class="productivity-text">Set up an integration with your code repository or your own custom SDK via
+              Lokalise's <a href="#">powerful API</a>. Do that once, and every time you make changes in the code,
+              they'll be automatically imported to Lokalise for translation.</p>
+            <a href="#" class="productivity-link">Learn more</a>
           </li>
           <li class="productivity-item">
-            <img src="" alt="productivity picture">
-            <h3 class="productivity-title title-font"></h3>
-            <p class="productivity-text"></p>
-            <a href="" class="productivity-link"></a>
+            <div class="productivity-pic"><img src="./img/productivity3.svg" alt="productivity picture"></div>
+            <h3 class="productivity-subtitle title-font">Translators</h3>
+            <p class="productivity-text">Eliminate double-work and neverending revisions with visual context
+              (screenshots) and live previews. Improve the quality and speed of your translations with built-in CAT
+              tools, like autocomplete, inline machine translation, and translation
+              memory.</p>
+            <a href="#" class="productivity-link">Learn more</a>
           </li>
         </ul>
       </div>
     </section>
+    <section class="attitude">
+      <div class="container">
+        <ul class="attitude-list list">
+          <li class="attitude-item">
+            <blockquote class="attitude-cite">“Lokalise has turned a task we were dreading into an absolute pleasure.
+              Great platform, intuitive UX, powerful API. The
+              automatic text recognition for screenshots has been a lifesaver, and over-the-air updates are the icing on
+              the cake.”</blockquote>
+            <p class="cite-author">Edward Cooper, Chief Mobile Officer</p>
+            <a href="#"><img src="./img/logo_word.svg" alt="logo-word" class="logo-word"></a>
+          </li>
+          <li class="attitude-item">
+            <img src="./img/foto_cooper.jpg" alt="foto cooper" class="foto_cooper" width="310">
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="translation">
+      <div class="container">
+        <ul class="translation-list list flex-center">
+          <li class="translation-item flex-center">
+            <img src="./img/cake.svg" alt="cake">
+            <h2 class="translation-title title-font">The most-loved translation management software</h2>
+          </li>
+          <li class="translation-itemnt">
+            <ul class="translation-sublist flex-center">
+              <li class="translation-subitem">
+                <img src="./img/translate-app1.svg" alt="app-logo">
+                <img src="./img/stars.svg" alt="stars">
+                <p class="app-text"><a class="link" href="#">USERS LOVE US</a></p>
+              </li>
+              <li class="translation-subitem">
+                <img src="./img/translate-app2.svg" alt="app-logo">
+                <img src="./img/stars.svg" alt="stars">
+                <p class="app-text"><a class="link" href="#">HIGHEST RATED</a></p>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="integrate">
+      <div class="container">
+        <h2 class="integrate-title title-font">Integrate Lokalise with your work tools</h2>
+        <p class="integrate-text">Automate processes, eliminate routine tasks, and track progress with ease.</p>
+        <img class="integrat-img" src="./img/integrate.png" alt="helpful bird">
+        <a class="btn btn-orange link" href="#">See all integrations</a>
+      </div>
+    </section>
+    <section class="cta">
+      <div class="container">
+        <h2 class="cta-title title-font">Localization made easy. Why wait?</h2>
+        <p class="cta-text">Try for free or let us show you how it works.</p>
+        <a class="btn link" href="#">Try it free</a>
+      </div>
+    </section>
   </main>
+  <footer class="foot">
+    <div class="container">
+      <div class="up-box">
+        <div class="studies">
+          <h2 class="studies-title title-font">Case Studies</h2>
+          <img class="studies-pic" src="./img/studies.jpg" alt="bicycle races">
+          <a href="#"><img class="studies-logo" src="./img/client1.svg" alt="logo-client"></a>
+          <p class="studies-text">Riding towards global success with a 100% teammate enthusiasm</p>
+          <a href="#" class="studies-link link title-font">Read more</a>
+        </div>
+        <ul class="contacts-list list">
+          <li class="contacts-item">
+            <h3 class="contacts-title title-font">Product</h3>
+            <ul class="contacts-sublist list">
+              <li class="contacts-subitem"><a href="#" class="contacts-sublink link">For developers</a></li>
+              <li class="contacts-subitem"><a href="#" class="contacts-sublink link">For managers</a></li>
+              <li class="contacts-subitem"><a href="#" class="contacts-sublink link">For translators</a></li>
+              <li class="contacts-subitem"><a href="#" class="contacts-sublink link">For designers</a></li>
+              <li class="contacts-subitem"><a href="#" class="contacts-sublink link">Integrations</a></li>
+              <li class="contacts-subitem"><a href="#" class="contacts-sublink link">Integrations</a></li>
+              <li class="contacts-subitem"><a href="#" class="contacts-sublink link">Pricing</a></li>
+              <li class="contacts-subitem"><a href="#" class="contacts-sublink link">Automations</a></li>
+            </ul>
+          </li>
+          <li class="contacts-item">
+            <h3 class="contacts-title title-font">Support</h3>
+            <ul class="contacts-sublist list">
+              <li class="contacts-subitem"><a href="#" class="contacts-sublink link">Contact</a></li>
+              <li class="contacts-subitem"><a href="#" class="contacts-sublink link">Documentation</a></li>
+              <li class="contacts-subitem"><a href="#" class="contacts-sublink link">Status</a></li>
+              <li class="contacts-subitem"><a href="#" class="contacts-sublink link">Product Updates</a></li>
+              <li class="contacts-subitem"><a href="#" class="contacts-sublink link">CLI Tool</a></li>
+              <li class="contacts-subitem"><a href="#" class="contacts-sublink link">API Reference</a></li>
+              <li class="contacts-subitem"><a href="#" class="contacts-sublink link">iOS and Android SDK</a></li>
+              <li class="contacts-subitem"><a href="#" class="contacts-sublink link">Supported File Formats</a></li>
+            </ul>
+          </li>
+          <li class="contacts-item">
+            <h3 class="contacts-title title-font">Company</h3>
+            <ul class="contacts-sublist list">
+              <li class="contacts-subitem"><a href="#" class="contacts-sublink link">About</a></li>
+              <li class="contacts-subitem"><a href="#" class="contacts-sublink link">Blog</a></li>
+              <li class="contacts-subitem"><a href="#" class="contacts-sublink link">Careers | We`re Hiring</a></li>
+              <li class="contacts-subitem"><a href="#" class="contacts-sublink link">Case Studies</a></li>
+              <li class="contacts-subitem"><a href="#" class="contacts-sublink link">Media Kit</a></li>
+            </ul>
+          </li>
+          <li class="contacts-item">
+            <h3 class="contacts-title title-font">Legal</h3>
+            <ul class="contacts-sublist list">
+              <li class="contacts-subitem"><a href="#" class="contacts-sublink link">Terms of Service</a></li>
+              <li class="contacts-subitem"><a href="#" class="contacts-sublink link">Privacy Policy</a></li>
+              <li class="contacts-subitem"><a href="#" class="contacts-sublink link">Cookie Policy</a></li>
+              <li class="contacts-subitem"><a href="#" class="contacts-sublink link">Privacy Shield</a></li>
+              <li class="contacts-subitem"><a href="#" class="contacts-sublink link">DPA</a></li>
+              <li class="contacts-subitem"><a href="#" class="contacts-sublink link">List of Sub-processors</a></li>
+              <li class="contacts-subitem"><a href="#" class="contacts-sublink link">Candidates Privacy Notice</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <div class="down-box">
+        <a class="down-box-link link" href="#">
+          <img class="down-box-logo" src="./img/logo-word-2.svg" alt="logo">
+        </a>
+        <p class="down-box-text">Localization workflow for your web and mobile apps, games and digital content.</p>
+        <ul class="down-box-rights">
+          <li>©2001-2020</li>
+          <li>All rights reserved.</li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 </body>
+
 </html>
